Fix: horizontal scroll

--- a/src/pages/buy/components/Card/style.module.scss
+++ b/src/pages/buy/components/Card/style.module.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   border: 1px solid #DCDCDC;
   border-radius: 18px;
-  min-width: 164px;
+  width: 100%;
 
   &:last-child {
     margin: 0;
