--- a/src/pages/buy/style.module.scss
+++ b/src/pages/buy/style.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   max-width: 375px;
   min-width: 320px;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   padding: 0 0 20px;
